get sales implemented
